
** 0.0.4
 - Command -s / start added
    -- Now the gem is able to start its rest service by command line

** 0.0.3
 - Algorithm improvements and big renaming:
    -- Adding a customizable algorithm that will allow to take decisions based on headers for routing
 - First version that includes cli:
    -- Renaming to follow recommended gem naming
    -- First version of the cli with help, verion e fallback to help

** 0.0.2
 - First version that inclues:
    -- Basic request with body, content-type and accept, for both, post and get operations

** 0.0.1
 - First version that inclues:
    -- Basic request with body for get operations