@@ -59,7 +59,29 @@ If you have any problems, please let me know.
 Using
 -----
 
-Soon.
+The focus here is in simplicity.
+
+Install rest_shifter
+    $ gem install rest_shifter
+
+Create the service (you can choose any name that have only letters and underline. It is required to start with a letter )
+    $ rest_shifter -c hello_world
+
+Start the service
+    $ rest_shifter -s
+
+Go to a browser and open the url:
+    $ http://localhost:4567/hello_world
+
+You should see the following JSON:
+    $ { \hello_world\ : \Your service is working fine. :D\ }
+
+To edit the service you just created, go to ~/.rest_shifter/flavors/hello_world.flavor 
+The name of the file is the name that you used in the command -c (create).
+
+Whatever you change in the file will change in the service as soon as you restart it.
+
+Enjoy
 
 LICENSE
 =======
