@@ -8,6 +8,7 @@ class RestShifter::Commands::Start
       $:.unshift(path) if File.directory?(path) && !$:.include?(path)
       require 'rest_shifter/shifter.rb'
     end
-    Shifter.run! 
+   
+    Shifter.run!
   end
 end
